--- a/resources/view/pages/page.html
+++ b/resources/view/pages/page.html
@@ -4,58 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>{{title}}</title>
+    <!-- lib -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <link rel="stylesheet" href="resources/assets/lib/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="resources/assets/style/css/includes.css">
     <script src="resources/assets/js/cabecalho.js"></script>
 </head>
 <body>
-    <header class="container-cabecalho">
-
-        <div class="content-logo-btn-menu">
-
-            <h2 class="logo"><a href="#">Logo aqui</a></h2>
-
-            <div class="content-menu" id="content-menu">
     
-                <nav class="menu-principal">
-                    <form action="#" class="form-busca" method="get">
-                        <input type="text" id="ipt-busca" name="ipt-busca" placeholder="busque por algo...">
-                        <button type="submit" class="btn-busca" id="btn-busca">
-                            <i class="fas fa-search"></i>
-                        </button>
-                    </form>
+    {{header}}
 
-                    <ul class="ul-items-menu">
-                        <li class="item item-menu" linkInterno="false">    <a class="a-item-menu" href="#home">Home</a></li>
-                        <li class="item item-menu" linkInterno="false"><a class="a-item-menu" href="#categorias">Categorias</a></li>
-                        <li class="item item-menu" linkInterno="false">    <a class="a-item-menu" href="#eventos">Eventos</a></li>
-                        <li class="item item-menu" linkInterno="false">    <a class="a-item-menu" href="#servicos">Serviços</a></li>
-                        <li class="item item-menu" linkInterno="false">    <a class="a-item-menu" href="#sobre">Sobre</a></li>
-                        <li class="item item-menu" linkInterno="false">    <a class="a-item-menu" href="#contato">Contato</a></li>
-                    </ul>
+    <div class="container">
 
-                    <ul class="ul-items-midia">
-                        <li class="item"><a href="" class="icon-facebook"><i class="fab fa-facebook-square"></i></a></li>
-                        <li class="item"><a href="" class="icon-instagram"><i class="fab fa-instagram"></i></a></li>
-                        <li class="item"><a href="" class="icon-youtube"><i class="fab fa-youtube"></i></a></li>
-                        <li class="item"><a href="" class="icon-whatsapp"><i class="fab fa-whatsapp"></i></a></li>
-                    </ul>
-
-                </nav>
-    
-            </div>
-
-            <div class="btn-menu">
-                <span class="linha-btn linha-btn-1"></span>
-                <span class="linha-btn linha-btn-2"></span>
-                <span class="linha-btn linha-btn-3"></span>
-            </div>
-
-        </div>
-
-    
-    </header>
+        
+        {{content}}
+        
+        {{footer}}
+    </div>
     
 </body>
 </html>
