--- a/resources/view/pages/header.html
+++ b/resources/view/pages/header.html
@@ -1,8 +1,19 @@
 <header class="container-cabecalho">
-
+<div class="container">
     <div class="content-logo-btn-menu">
 
-        <h2 class="logo"><a href="#">Logo aqui</a></h2>
+        <div class="logo-box-busca-large">
+            <h2 class="logo"><a href="#">Logo aqui</a></h2>
+    
+            <div class="box-busca-large">
+                <form action="#" class="form-busca" method="get">
+                    <input type="text" id="ipt-busca" name="ipt-busca" placeholder="busque por algo...">
+                    <button type="submit" class="btn-busca" id="btn-busca">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </form>
+            </div>
+        </div>
 
         <div class="content-menu" id="content-menu">
 
@@ -42,5 +53,5 @@
 
     </div>
 
-
+</div>
 </header>
