--- a/resources/view/pages/page.html
+++ b/resources/view/pages/page.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="resources/assets/lib/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="resources/assets/style/css/includes.css">
     <script src="resources/assets/js/cabecalho.js"></script>
+    <link rel="shortcut icon" href="resources/assets/img/sistema/favicon.png" type="image/x-icon">
 </head>
 <body>
     
