--- a/resources/assets/style/css/reset.css
+++ b/resources/assets/style/css/reset.css
@@ -15,10 +15,16 @@ img {
 
 ul {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 a {
   text-decoration: none;
+}
+
+h2 {
+  margin: 0;
 }
 
 /*# sourceMappingURL=reset.css.map */
