--- a/resources/view/pages/header.html
+++ b/resources/view/pages/header.html
@@ -35,10 +35,10 @@
                 </ul>
 
                 <ul class="ul-items-midia">
-                    <li class="item"><a href="" class="icon-facebook"><i class="fab fa-facebook-square"></i></a></li>
-                    <li class="item"><a href="" class="icon-instagram"><i class="fab fa-instagram"></i></a></li>
-                    <li class="item"><a href="" class="icon-youtube"><i class="fab fa-youtube"></i></a></li>
-                    <li class="item"><a href="" class="icon-whatsapp"><i class="fab fa-whatsapp"></i></a></li>
+                    <li class="item"><a href="" class="icon-midia icon-facebook"><i class="fab fa-facebook-square"></i></a></li>
+                    <li class="item"><a href="" class="icon-midia icon-instagram"><i class="fab fa-instagram"></i></a></li>
+                    <li class="item"><a href="" class="icon-midia icon-youtube"><i class="fab fa-youtube"></i></a></li>
+                    <li class="item"><a href="" class="icon-midia icon-whatsapp"><i class="fab fa-whatsapp"></i></a></li>
                 </ul>
 
             </nav>
