--- a/resources/view/pages/home.html
+++ b/resources/view/pages/home.html
@@ -1,8 +1,8 @@
+<main class="container main-principal main-home">
+    <h1>Home {{name}}</h1>
 
-
-<h1>Home {{name}}</h1>
-
-<hr>
-{{description}}
-<hr>
-{{site}}
+    <hr>
+    {{description}}
+    <hr>
+    {{site}}
+</main>
