--- a/resources/assets/style/css/includes.css
+++ b/resources/assets/style/css/includes.css
@@ -258,16 +258,24 @@ h2 {
     padding: 20px 0;
     border-bottom: 1px solid #eee;
   }
+  .container-cabecalho .content-logo-btn-menu .logo-box-busca-large .logo a {
+    width: 160px;
+    height: 50px;
+    background-size: 160px;
+  }
   .container-cabecalho .content-logo-btn-menu .logo-box-busca-large .box-busca-large {
     flex: 1;
     display: flex;
+  }
+  .container-cabecalho .content-logo-btn-menu .logo-box-busca-large .box-busca-large .form-busca #ipt-busca {
+    padding: 0px 15px;
   }
   .container-cabecalho .content-logo-btn-menu .btn-menu {
     display: none;
   }
   .container-cabecalho .content-logo-btn-menu .content-menu {
+    width: 100%;
     height: 100%;
-    width: auto;
     position: relative;
     left: inherit;
     background-color: inherit;
@@ -281,6 +289,7 @@ h2 {
     transition: none;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
   }
   .container-cabecalho .content-logo-btn-menu .content-menu .menu-principal .form-busca {
     width: auto;
@@ -303,7 +312,15 @@ h2 {
     cursor: pointer;
   }
   .container-cabecalho .content-logo-btn-menu .content-menu .menu-principal .ul-items-midia {
-    display: none;
+    width: auto;
+    position: static;
+    padding: 0;
+  }
+  .container-cabecalho .content-logo-btn-menu .content-menu .menu-principal .ul-items-midia li.item {
+    margin-left: 15px;
+  }
+  .container-cabecalho .content-logo-btn-menu .content-menu .menu-principal .ul-items-midia li.item a.icon-midia {
+    font-size: 1.2em;
   }
   .container-cabecalho .content-logo-btn-menu .content-menu .menu-principal .ul-items-menu {
     padding: 0;
@@ -318,11 +335,29 @@ h2 {
   .container-cabecalho .content-logo-btn-menu .content-menu .menu-principal .ul-items-menu li.item a {
     color: #3c4e64;
   }
-  .container-cabecalho .content-logo-btn-menu .content-menu .menu-principal .ul-items-menu li.item:hover a {
-    color: #333;
+  .container-cabecalho .content-logo-btn-menu .content-menu .menu-principal .ul-items-menu li.item:hover a.a-item-menu {
+    color: #00AAFF;
     background-color: transparent;
-    text-decoration: underline;
   }
+}
+.contente-btn-volta-topo {
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+}
+.contente-btn-volta-topo .btn-volta-top {
+  padding: 8px 10px;
+  border: 1px solid #FFFFFF;
+  cursor: pointer;
+  background-color: #00AAFF;
+  color: #FFFFFF;
+  border-radius: 3px;
+  display: none;
+}
+.contente-btn-volta-topo .btn-volta-top-visivel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*# sourceMappingURL=includes.css.map */
