--- a/resources/view/pages/page.html
+++ b/resources/view/pages/page.html
@@ -10,19 +10,23 @@
     <link rel="stylesheet" href="resources/assets/lib/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="resources/assets/style/css/includes.css">
     <script src="resources/assets/js/cabecalho.js"></script>
+    <script src="resources/assets/js/main.js"></script>
     <link rel="shortcut icon" href="resources/assets/img/sistema/favicon.png" type="image/x-icon">
 </head>
 <body>
     
     {{header}}
 
-    <div class="container">
 
+    {{content}}
         
-        {{content}}
-        
-        {{footer}}
-    </div>
     
+    {{footer}}
+
+    <div class="contente-btn-volta-topo">
+        <button class="btn-volta-top">
+            <i class="fas fa-chevron-up"></i>
+        </button>
+    </div>
 </body>
 </html>
